// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS1 S1"
>
  <TileR />
</div>
`;

exports[`2. lead one and one slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS1 S1"
>
  <div
    className="S1"
  >
    <TileU />
    <TileC />
  </div>
</div>
`;

exports[`3. lead one and four slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="S1"
>
  <TileI />
  <TileJ />
  <div
    className="IS1 S1"
  />
  <TileJ />
  <div
    className="IS2 S1"
  />
  <TileJ />
  <div
    className="IS3 S1"
  />
  <TileJ />
</div>
`;

exports[`4. lead two no pic and two 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="S1"
>
  <TileF />
  <div
    className="IS1 S1"
  />
  <TileB />
  <div
    className="IS2 S1"
  />
  <TileD />
  <div
    className="IS3 S1"
  />
  <TileE />
</div>
`;

exports[`5. secondary one slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  padding-bottom: 10px;
}
</style>

<div
  className="IS1 S1"
>
  <TileA />
</div>
`;

exports[`6. secondary four slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 50%;
}

.IS7 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS8 {
  width: 50%;
}

.IS9 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS11 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="IS11 S1"
>
  <div
    className="IS10 S1"
  >
    <div
      className="IS4 S1"
    >
      <div
        className="IS1 S1"
      >
        <TileC />
      </div>
      <div
        className="IS2"
      />
      <div
        className="IS3 S1"
      >
        <TileC />
      </div>
    </div>
    <div
      className="IS5 S1"
    />
    <div
      className="IS9 S1"
    >
      <div
        className="IS6 S1"
      >
        <TileC />
      </div>
      <div
        className="IS7"
      />
      <div
        className="IS8 S1"
      >
        <TileC />
      </div>
    </div>
  </div>
</div>
`;

exports[`7. secondary one and four slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 10px;
  margin-right: 10px;
  margin-left: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS4 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS8 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS9 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="IS9 S1"
>
  <div
    className="IS1 S1"
  >
    <TheTimesLogo
      height={40}
      width={40}
    />
  </div>
  <div
    className="IS2 S1"
  />
  <div
    className="IS8 S1"
  >
    <div
      className="IS3 S1"
    >
      <div
        className="S1"
      >
        <TileN />
      </div>
    </div>
    <div
      className="IS4 S1"
    />
    <div
      className="S1"
    >
      <TileO />
    </div>
    <div
      className="IS5 S1"
    />
    <div
      className="S1"
    >
      <TileO />
    </div>
    <div
      className="IS6 S1"
    />
    <div
      className="S1"
    >
      <TileO />
    </div>
    <div
      className="IS7 S1"
    />
    <div
      className="S1"
    >
      <TileO />
    </div>
  </div>
</div>
`;

exports[`8. secondary two and two slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<div
  className="IS7 S1"
>
  <div
    className="IS4 S1"
  >
    <div
      className="IS1 S1"
    >
      <TileC />
    </div>
    <div
      className="IS2"
    />
    <div
      className="IS3 S1"
    >
      <TileC />
    </div>
  </div>
  <div
    className="IS5 S1"
  />
  <div
    className="S1"
  >
    <TileG />
  </div>
  <div
    className="IS6 S1"
  />
  <div
    className="S1"
  >
    <TileG />
  </div>
</div>
`;

exports[`9. secondary two no pic and two slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}
</style>

<div
  className="S1"
>
  <TileB />
  <div
    className="IS1 S1"
  />
  <TileB />
  <div
    className="IS2 S1"
  />
  <TileG />
  <div
    className="IS3 S1"
  />
  <TileG />
</div>
`;

exports[`10. list two and six no pic slice 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.IS1 {
  padding-bottom: 5px;
  width: 50%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  padding-bottom: 5px;
  width: 50%;
}

.IS4 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS8 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS9 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS10 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS11 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<div
  className="IS11 S1"
>
  <div
    className="IS4 S1"
  >
    <div
      className="IS1 S1"
    >
      <TileC />
    </div>
    <div
      className="IS2"
    />
    <div
      className="IS3 S1"
    >
      <TileC />
    </div>
  </div>
  <div
    className="IS5 S1"
  />
  <div
    className="S1"
  >
    <TileL />
    <div
      className="IS6 S1"
    />
  </div>
  <div
    className="S1"
  >
    <TileL />
    <div
      className="IS7 S1"
    />
  </div>
  <div
    className="S1"
  >
    <TileL />
    <div
      className="IS8 S1"
    />
  </div>
  <div
    className="S1"
  >
    <TileL />
    <div
      className="IS9 S1"
    />
  </div>
  <div
    className="S1"
  >
    <TileL />
    <div
      className="IS10 S1"
    />
  </div>
  <div
    className="S1"
  >
    <TileL />
  </div>
</div>
`;

exports[`11. leaders slice 1`] = `
<style>
.S1 {
  font-weight: inherit;
  margin-bottom: 0px;
}

.S2 {
  margin-bottom: 0px;
}

.IS1 {
  height: 51;
  width: 283;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 16px;
  line-height: 15px;
  text-align: center;
}

.IS3 {
  padding-bottom: 5px;
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  border-bottom-color: rgba(219,219,219,1.00);
  border-bottom-width: 1px;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  padding-bottom: 5px;
}

.IS8 {
  padding-right: 40px;
  padding-left: 40px;
  padding-top: 20px;
}
</style>

<div
  className="IS8 S2"
>
  <div
    className="IS4 S2"
  >
    <Image
      aspectRatio={5.74}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div
      className="IS3 S2"
    >
      <div
        className="IS2 S1"
      >
         Leading Articles 
      </div>
    </div>
  </div>
  <div
    className="IS7 S2"
  >
    <TileM />
    <div
      className="IS5 S2"
    />
    <TileM />
    <div
      className="IS6 S2"
    />
    <TileM />
  </div>
</div>
`;
